# insight

./: .gitignore  README.md
source/insight/: Dockerfile  pyproject.toml
source/insight/debian/: changelog  control  dirs  insight.service  install  rules
source/insight/insight/: broker.py  config.py  insight.py
source/insight/share/: insight.toml
