[tool.poetry]
name = "insight"
version = "0.1.0"
description = "MQTT Service to Provide 'insight' on Pi's doings"
authors = ["Jason E. Blackert <jasonblackert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
toml = "^0.10.2"
pyroute2 = "^0.7.8"
pyqt5 = "^5.15.9"
opencv-python = "^4.5.1.48"
matplotlib = "^3.6.3"

[tool.poetry.scripts]
insight = "insight.insight:main"
insight-id = "insight.insight:id"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
ruff = "^0.0.275"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I", "N", "PTH", "UP"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
